fix wrapping issue'

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,3 +19,15 @@ $header-height : 70px;
 
     }
 }
+
+
+
+@media(max-width: 992px){
+
+    .content{
+      padding-right: .5rem !important;
+      padding-left: .5rem !important;  
+     
+    }
+}
+
