--- a/src/styles.scss
+++ b/src/styles.scss
@@ -210,4 +210,11 @@ a {
         font-size: .6rem;
 
     }
+
+    .main-td{
+        font-size: .7rem !important;
+        text-wrap: wrap !important;
+        max-width: 100px;
+    }
+
 }
